--- a/lambda/Dockerfile.dev
+++ b/lambda/Dockerfile.dev
@@ -1,11 +1,11 @@
 FROM public.ecr.aws/lambda/python:3.9
 
-# Copy requirements and install
-COPY requirements.txt ${LAMBDA_TASK_ROOT}/
+# Install dependencies
+COPY requirements.txt .
 RUN pip install --upgrade pip && \
-    pip install --no-cache-dir -r requirements.txt
+    pip install --no-cache-dir -r requirements.txt -t .
 
 # Copy handler
-COPY dev_handler.py ${LAMBDA_TASK_ROOT}/
+COPY dev_handler.py .
 
 CMD ["dev_handler.lambda_handler"]
