--- a/lambda/requirements.txt
+++ b/lambda/requirements.txt
@@ -2,3 +2,14 @@ openai>=1.11.0
 boto3>=1.34.0
 PyPDF2>=3.0.0
 python-jose[cryptography]>=3.3.0
+langgraph>=0.0.46
+langchain-openai>=0.3.0
+langchain-pinecone>=0.2.0
+langchain-core>=0.3.0
+duckduckgo-search>=8.0.0
+pinecone-client>=2.2.4
+urllib3<1.27,>=1.25.4
+langchain-openai>=0.0.5
+langchain-pinecone>=0.0.3
+pinecone-client>=3.0.0
+duckduckgo-search>=4.0.0
