--- a/lambda/Dockerfile.dev
+++ b/lambda/Dockerfile.dev
@@ -4,8 +4,8 @@ WORKDIR ${LAMBDA_TASK_ROOT}
 
 # Install dependencies
 COPY requirements.txt .
-RUN pip install --upgrade pip && \
-    pip install --no-cache-dir -r requirements.txt
+RUN pip install --upgrade pip setuptools wheel && \
+    PIP_ONLY_BINARY=:all: pip install --no-cache-dir -r requirements.txt
 
 # Copy handler
 COPY dev_handler.py .
