--- a/lambda/requirements.txt
+++ b/lambda/requirements.txt
@@ -9,6 +9,7 @@ langchain-core>=0.3.0
 duckduckgo-search>=8.0.0
 pinecone-client>=2.2.4
 urllib3<1.27,>=1.25.4
+tiktoken>=0.7.0
 langchain-openai>=0.0.5
 langchain-pinecone>=0.0.3
 pinecone-client>=3.0.0
