Include agents in deployment image

--- a/lambda/Dockerfile.dev
+++ b/lambda/Dockerfile.dev
@@ -7,7 +7,9 @@ COPY requirements.txt .
 RUN pip install --upgrade pip setuptools wheel && \
     PIP_ONLY_BINARY=:all: pip install --no-cache-dir -r requirements.txt
 
-# Copy handler
+# Copy handler and supporting modules
 COPY dev_handler.py .
+COPY config.py .
+COPY agents ./agents
 
 CMD ["dev_handler.lambda_handler"]
