--- a/lambda/requirements.txt
+++ b/lambda/requirements.txt
@@ -5,11 +5,10 @@ python-jose[cryptography]>=3.3.0
 langchain>=0.3.0
 langchain-core>=0.3.0
 langchain-openai>=0.3.0
-langchain-pinecone>=0.2.0
 langgraph>=0.0.46
-pinecone-client>=3.0.0
-duckduckgo-search>=8.0.0
+ddgs>=1.0.0
 urllib3<1.27,>=1.25.4
 tiktoken>=0.7.0
 pydantic>=2.6.0
 pydantic-core>=2.16.3
+requests>=2.31.0
