--- a/lambda/Dockerfile.dev
+++ b/lambda/Dockerfile.dev
@@ -10,6 +10,7 @@ RUN pip install --upgrade pip setuptools wheel && \
 # Copy handler and supporting modules
 COPY dev_handler.py .
 COPY config.py .
+COPY knowledge_graph.py .
 COPY agents ./agents
 
 CMD ["dev_handler.lambda_handler"]
